# state-harness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  analyze_fullstack.py  analyze_results.py  cross_model_smoke_test.py  rerun_retail.sh  run_definitive_benchmark.sh  run_domain_airline.sh  run_domain_retail.sh  run_domain_telecom.sh  run_full_benchmark.sh  run_fullstack_benchmark.sh
benchmarks/local_models/: analyze_local_results.py  run_local_benchmark.py  run_mint_local.sh  run_mint_naive_cap.sh  run_tau3_local.sh  setup_local.sh  tasks.py
benchmarks/mint/: gemini_agent.py  gemini_feedback_agent.py  mint_harness.py  run_harness_mint.py  run_mint.sh  run_mint_fullstack.sh  setup_mint.sh
benchmarks/mint/configs/: gemini_baseline_coding_humaneval.json  gemini_baseline_coding_mbpp.json  gemini_baseline_reasoning_gsm8k.json  gemini_baseline_reasoning_math.json
benchmarks/swe_bench/: docker_run.patch  harness_loop.py  run_benchmark.sh  run_benchmark_bce.sh  run_benchmark_dbe.sh  run_multi_trial.sh  setup.sh
benchmarks/swe_bench/flow_configs/: swebench_baseline.json  swebench_harness.json
benchmarks/tau3/: run_5phase_airline.sh
examples/: failure_report_demo.py  quickstart.py  tau3_bench_agent.py
python/state_harness/: LICENSE  __init__.py  _core.pyi  adapters.py  cli.py  diagnostics.py  sdk.py
scripts/: health_check.py
src/: lib.rs  lyapunov.rs  rg.rs  vsa.rs
tau3_integration/: harness_agent.py  naive_cap_agent.py
tests/: test_integration.py
